RbA Build/src/objects/Warranty__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Cost_To__c</fullName>
        <label>Charge Cost To Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Charge__c.Service_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>Charge__c.Category__c</field>
                <operation>equals</operation>
                <value>Renewal by Andersen</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Charge__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Warranties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <formula>Service_Product__r.Installed_Product_Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Code_Time__c</fullName>
        <formula>Quantity__c *   Procedure_Code__r.Procedure_Code__r.Time_Minutes_Each__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure Code Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure Code</label>
        <referenceTo>Procedure_Code_Assignment__c</referenceTo>
        <relationshipLabel>Warranties</relationshipLabel>
        <relationshipName>Warranties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Product_Text__c</fullName>
        <formula>Service_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Reimbursement</relationshipLabel>
        <relationshipName>Warranties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Warranties</relationshipLabel>
        <relationshipName>Warranties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warranty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000}</displayFormat>
        <label>Reimbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Warranty_for_RbA_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Charge_Cost_To__r.Category__c, &apos;Renewal by Andersen&apos;)), NOT(Service_Product__r.Number_Service_Symptoms__c &gt; 0))</errorConditionFormula>
        <errorMessage>Warranty records are only for Charges to &apos;Manufacturing&apos; and Category = &apos;Renewal by Andersen&apos; and the Product has at least 1 Service Symptom</errorMessage>
    </validationRules>
</CustomObject>